@@ -7,6 +7,7 @@
     import openturns as ot
     from matplotlib import pyplot as plt
     from openturns.viewer import View
+    title = None
     if ot.{{ objname }}().__class__.__name__ == 'Bernoulli':
         distribution = ot.Bernoulli(0.7)
     elif ot.{{ objname }}().__class__.__name__ == 'Binomial':
@@ -39,10 +40,16 @@
         distribution = ot.UserDefined([[1.0], [2.0], [3.0]], [0.4, 0.5, 1.0])
     elif ot.{{ objname }}().__class__.__name__ == 'ZipfMandelbrot':
         distribution = ot.ZipfMandelbrot(10, 2.5, 0.3)
+    elif ot.{{ objname }}().__class__.__name__ == 'Normal':
+        cov = ot.CovarianceMatrix([[1.0, -0.5], [-0.5, 1.0]])
+        distribution = ot.Normal([0.0, 0.0], cov)
+        title = "Normal dist. with correlation coefficient {}".format(cov[0, 1])
     else:
         distribution = ot.{{ objname }}()
+
     dimension = distribution.getDimension()
-    title = str(distribution)[:100].split('\n')[0]
+    if title is None:
+        title = str(distribution)[:100].split('\n')[0]
     if dimension == 1:
         distribution.setDescription(['$x$'])
         pdf_graph = distribution.drawPDF()
@@ -54,12 +61,17 @@
         View(cdf_graph, figure=fig, axes=[cdf_axis], add_legend=False)
         fig.suptitle(title)
     elif dimension == 2:
-        distribution.setDescription(['$x_1$', '$x_2$'])
+        grid = ot.GridLayout(1, 2)
         pdf_graph = distribution.drawPDF()
-        pdf_graph.setTitle(title)
-        fig = plt.figure(figsize=(10, 5))
-        pdf_axis = fig.add_subplot(111)
-        View(pdf_graph, figure=fig, axes=[pdf_axis], add_legend=False, square_axes=False)
+        pdf_graph.setLegends([''])
+        cdf_graph = distribution.drawCDF()
+        cdf_graph.setLegends([''])
+        grid.setGraph(0, 0, pdf_graph)
+        grid.setGraph(0, 1, cdf_graph)
+        grid.setTitle(title)
+        fig = View(grid).getFigure()
+        fig.axes[0].set_title('PDF')
+        fig.axes[1].set_title('CDF')
 
 .. currentmodule:: {{ module }}
 
